<resources>
    <string name="app_name">Kesma</string>
    <string name="nama">Nama</string>
    <string name="nrp">NRP</string>
    <string-array name="penghasilan">
        <item>0</item>
        <item>500000</item>
        <item>1000000</item>
        <item>2500000</item>
        <item>4000000</item>
        <item>5000000</item>
        <item>6000000</item>
        <item>7000000</item>
    </string-array>
    <string name="update">Update Data</string>
    <string name="pesanupdate">Apakah ingin mengupdate ?</string>
    <string name="gagalupdate">Update Gagal</string>
    <string name="pesanGagal">Apakah ingin mencoba lagi ?</string>
    <string name="gagal">Gagal</string>
    <string name="cencel">Cancel</string>
    <string name="cobalagi">Coba Lagi</string>
    <string name="detail">Detail Data</string>
    <string name="pesandetail">Apakah ingin melihat lebih detail ? </string>
    <string name="Lihat">Lihat</string>
    <string name="belum">Belum di Isi</string>
    <string name="ukt">UKT</string>
    <string name="delete">Delete</string>
    <string name="upat">Update</string>
    <string name="tambah">Tambah</string>
    <string name="buku">Buku</string>
    <string name="kirim">Kirim</string>
    <string name="beasiswa">Beasiswa</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="pesandelete">Apakah ingin menghapus data ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Sabar !!!!</string>
    <string name="magang">PERSIAPAN MAGANG</string>
    <string name="title_activity_detailed">DetailedActivity</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="cari">Search</string>
    <string name="belumdiisi">Belum di isi</string>
    <string name="titik">:</string>
</resources>
