<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.root.retrofit.DetailedActivity"
    tools:showIn="@layout/activity_detailed"
    android:weightSum="10"
    android:orientation="vertical">
    <com.github.florent37.arclayout.ArcLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:arc_cropDirection="cropOutside"
        app:arc_position="bottom"
        app:arc_height="90dp"
        android:elevation="5dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/gambarnya"
            android:src="@drawable/boy" />
    </com.github.florent37.arclayout.ArcLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nrp"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum"
            android:textSize="15sp"
            android:id="@+id/tv_isinrp1"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum"
            android:textSize="15sp"
            android:id="@+id/tv_isinama1"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ukt"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum"
            android:textSize="15sp"
            android:id="@+id/tv_isiukt1" />
    </LinearLayout>
</LinearLayout>
