<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.example.root.retrofit.CariActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <com.github.silvestrpredko.dotprogressbar.DotProgressBar
            android:id="@+id/dot_progress_bar7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            custom:amount="5"
            custom:duration="@android:integer/config_mediumAnimTime"
            custom:endColor="@color/colorPrimaryDark"
            custom:startColor="@color/colorPrimary"
            custom:animationDirection="left"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nrp"
                android:id="@+id/et_nrp2"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:id="@+id/et_nama2"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ukt"
                android:id="@+id/et_ukt2"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cari"
            android:backgroundTint="@color/colorPrimary"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/btn_cari2"/>
    </LinearLayout>
</RelativeLayout>
